--- a/src/App.css
+++ b/src/App.css
@@ -96,7 +96,7 @@ nav {
 .homepage-container {
   width: 100%;
   display: flex;
-  flex-direction: column;
+  flex-direction:column
  
 }
 
@@ -131,14 +131,14 @@ nav {
 
 .homepage {
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
   gap: 20px;
   padding: 20px;
 }
 
 .posts {
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
   gap: 15px;
 }
 
