--- a/src/App.css
+++ b/src/App.css
@@ -213,7 +213,94 @@ nav {
   .navbar-icon {
     margin-right: 0;
   }
+/*-----POSTCARD-----*/
+.post-container {
+  display: flex;
+  border: 1px solid #e1e8ed;
+  border-radius: 8px;
+  margin-bottom: 15px;
+  padding: 15px;
+  background-color: #fff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  max-width: auto;
+  min-width: 190px;
+}
 
+.image-wrapper {
+  margin-left: -5px;
+  margin-right: 10px;
+}
+
+.image {
+  width: 40px;
+  height: 40px;
+  border-radius: 49%;
+}
+
+.content-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin-bottom: 10px;
+}
+
+.author-info {
+  display: flex;
+  flex-direction: column;
+}
+
+.author-name {
+  font-size: 14px;
+  font-weight: bold;
+  color: #14171a;
+}
+
+.username {
+  font-size: 12px;
+  color: #657786;
+}
+
+.visibility {
+  font-size: 12px;
+  color: #657786;
+  font-style: italic;
+}
+
+.content {
+  font-size: 14px;
+  color: #14171a;
+  margin-top: 10px;
+  display: flex;
+  align-items: flex-start;
+  text-align: left;
+}
+
+.interaction-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row-reverse;
+  margin-top: 15px;
+  font-size: 14px;
+  color: #657786;
+}
+
+.like-container {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  gap: 5px;
+}
+
+.like-count {
+  margin: 0;
+  padding: 0;
+}
 
 @keyframes logo-spin {
   from {
